--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,8 @@
+<h1>Eat-Da-Burger</h1>
+<div id="burgerpic">
+    <img src="/assets/img/burgerAni.png" alt="">
+</div>
+
 <ul>
     {{#each burgers}}
     {{#unless devoured}}
