--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,32 @@
-<h1>Eat-Da-Burger</h1>
-<div id="burgerpic">
-    <img src="/assets/img/burgerAni.png" alt="">
+<div class="container">
+    <h1>Eat-Da-Burger</h1>
+    <div id="burgerpic">
+        <img src="/assets/img/burgerAni.png" alt="">
+    </div>
+    <div class="newburger">
+        <input id="burgerName" type="text" placeholder=" Add New Burger"><button id="submit_btn"></button>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h2>Are you hungry?</h2>
+            <ul>
+                {{#each burgers}}
+                {{#unless devoured}}
+                <li>{{ burger_name }} <button class="eat-burger" data-id={{ id }}>Devour!</button></li>
+                {{/unless}}
+                {{/each}}
+            </ul>
+        </div>
+
+        <div class="col">
+            <h2>Devoured</h2>
+            <ul>
+                {{#each burgers}}
+                {{#if devoured}}
+                <li>{{ burger_name }}</li>
+                {{/if}}
+                {{/each}}
+            </ul>
+        </div>
+    </div>
 </div>
-
-<ul>
-    {{#each burgers}}
-    {{#unless devoured}}
-    {{/unless}}
-    {{/each}}
-</ul>
-
-<ul>
-    {{#each burgers}}
-    {{#if devoured}}
-    {{/if}}
-    {{/each}}
-</ul>
