--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,9 @@
     <div id="burgerpic">
         <img src="/assets/img/burgerAni.png" alt="">
     </div>
+    <br>
     <div class="newburger">
-        <input id="burgerName" type="text" placeholder=" Add New Burger"><button id="submit_btn"></button>
+        <input id="burgerName" type="text" placeholder=" Add New Burger"><button id="submit_btn">Submit</button>
     </div>
     <div class="row">
         <div class="col">
