finished dev coms

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,7 @@
         <img src="/assets/img/burgerAni.png" alt="">
     </div>
     <br>
+    {{!-- Text box and submit button for the new burger --}}
     <div class="newburger">
         <input id="burgerName" type="text" placeholder=" Add New Burger"><button id="submit_btn">Submit</button>
     </div>
